config & first tests ok

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,24 @@
             <scope>test</scope>
         </dependency>
 
+
+        <dependency>
+            <groupId>ch.qos.logback.contrib</groupId>
+            <artifactId>logback-json-classic</artifactId>
+            <version>0.1.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>7.3</version>
+        </dependency>
         <!-- assertions used during tests -->
         <dependency>
             <groupId>org.assertj</groupId>
